--- a/src/Schedule/CalendarMenu/style.css
+++ b/src/Schedule/CalendarMenu/style.css
@@ -45,17 +45,36 @@
     font-size: 13px;
 }
 
-.nameContainer {
+.nameContainer, .nameFilterModeContainer, .nameClickedContainer {
     display: inline-block;
     vertical-align: top;
     width: calc((40vw - 53px) / 2);
+    padding-left: 2px;
+}
+
+.nameFilterModeContainer, .nameClickedContainer {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border-color: lightskyblue;
+    border-width: 1px;
+    border-style: inset;
+    border-radius: 5px;
+}
+
+.nameClickedContainer {
+    background-color: lightskyblue;
+}
+
+.nameFilterModeContainer:hover {
+    cursor: pointer;
 }
 
 .name {
     display: inline-block;
     vertical-align: middle;
     margin-left: 2px;
-    max-width: calc((40vw - 53px) / 2 - 2px - 13px);
+    width: calc((38vw - 53px) / 2 - 2px - 13px - 13px );
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -74,6 +93,25 @@
     border-style:inset;
 }
 
+.deleteCalendarNameContainer {
+    display: inline-block;
+}
+
+.deleteCalendarName {
+    width: 13px;
+    height: 13px;
+}
+
+.editCalendarNameColor {
+    vertical-align: top;
+    width: 13px;
+    height: 13px;
+    padding-bottom: 2px;
+    fill: white;
+    stroke-width: 1px;
+    stroke:black;
+}
+
 .calendarLegendButtons {
     display: inline-block;
     vertical-align: top;
@@ -81,7 +119,7 @@
     height: 100px;
 }
 
-.calendarLegendButton {
+.calendarUnclickedLegendButton {
     text-align: center;
     width: 30px;
     height: 30px;
@@ -92,6 +130,24 @@
     border-color: rgb(76, 87, 192);
     border-width: 2px;
     border-style: inset;
+}
+
+.calendarClickedLegendButton {
+    background-color: lightblue;
+    text-align: center;
+    width: 30px;
+    height: 30px;
+    margin-bottom: 3px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border-color: rgb(76, 87, 192);
+    border-width: 2px;
+    border-style: inset;
+}
+
+.calendarClickedLegendButton:hover, .calendarUnclickedLegendButton:hover, .calendarMenuButton:hover {
+    cursor: pointer;
 }
 
 .calendarLegendText {
@@ -145,6 +201,10 @@
 
 .rightCalendarArrow {
     display: inline-block;
+}
+
+.leftCalendarArrow:hover, .rightCalendarArrow:hover {
+    cursor: pointer;
 }
 
 .selectedWeek {
